# van-depot

./: .env.example  .gitattributes  .gitignore  .rgignore  CLAUDE.md  Makefile  README.md  dev.kdl  docker-compose.yml
backend/: Cargo.toml  MIGRATIONS.md
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  lib.rs  main.rs  pagination.rs  state.rs
backend/crates/api/src/extractors/: claims.rs  mod.rs  role_guard.rs  tenant.rs  warehouse_access.rs
backend/crates/api/src/middleware/: mod.rs  superadmin_guard.rs  tenant_tx.rs
backend/crates/api/src/routes/: abc.rs  alerts.rs  auth.rs  categories.rs  cycle_counts.rs  dashboard.rs  health.rs  inventory.rs  locations.rs  lots.rs  mod.rs  movements.rs  notifications.rs  products.rs  purchase_orders.rs  purchase_returns.rs  recipes.rs  stock_config.rs  supplier_products.rs  suppliers.rs  users.rs  warehouse_map.rs  warehouses.rs  work_orders.rs
backend/crates/api/tests/: admin_impersonate.rs  admin_seed_demo.rs  multi_tenant_isolation.rs  product_classification.rs  reception_flow_routes.rs  rls_sql.rs  role_isolation.rs  work_orders.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: error.rs  lib.rs
backend/crates/domain/src/models/: category.rs  cycle_count.rs  (+21 more)
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: lib.rs
backend/crates/infra/tests/: product_classification.rs  reception_flow.rs  seed_demo_materialize.rs  work_orders_pick.rs
backend/migrations/: 20260404000001_initial_schema.sql  20260405000001_cycle_counts.sql  20260406000001_notifications.sql  20260407000001_recipes.sql  20260408000001_supplier_management.sql  20260409000001_purchase_orders.sql  20260410000001_product_audit_fields.sql  20260411000001_location_layout_fields.sql  20260412000001_invite_codes.sql  20260412000002_purchase_returns.sql  20260418000001_add_reception_location_type.sql  20260418000002_reception_location.sql  20260421000001_add_product_class_enum.sql  20260421000002_add_product_class_columns.sql  20260421000003_create_tool_instances.sql  20260423000001_add_is_manufactured_to_products.sql  20260423000002_add_work_center_and_finished_good_location_types.sql  20260423000003_backfill_finished_good_and_work_center_invariants.sql  20260423000004_create_work_orders_and_materials.sql  20260423000005_add_work_order_id_to_movements.sql  20260507000001_create_tenants.down.sql  20260507000001_create_tenants.sql  20260507000002_user_tenants_and_superadmin.down.sql  20260507000002_user_tenants_and_superadmin.sql  20260507000003_drop_global_role.down.sql  20260507000003_drop_global_role.sql  20260508000001_tenant_id_warehouses_locations.down.sql  20260508000001_tenant_id_warehouses_locations.sql  20260508000002_tenant_id_products_categories.down.sql  20260508000002_tenant_id_products_categories.sql  20260508000003_tenant_id_suppliers_supplier_products.down.sql  20260508000003_tenant_id_suppliers_supplier_products.sql  20260508000004_tenant_id_movements_inventory_lots.down.sql  20260508000004_tenant_id_movements_inventory_lots.sql  20260508000005_tenant_id_recipes_work_orders.down.sql  20260508000005_tenant_id_recipes_work_orders.sql  20260508000006_tenant_id_purchase_orders_returns.down.sql  20260508000006_tenant_id_purchase_orders_returns.sql  20260508000007_tenant_id_cycle_counts_notifications.down.sql  20260508000007_tenant_id_cycle_counts_notifications.sql  (+12 more)
(+341 files in other folders)
