[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["VanDev"]
license = "MIT"

[workspace.dependencies]
# Web
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
async-trait = "0.1"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP extras
axum-extra = { version = "0.10", features = ["typed-header"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
