[package]
name = "vandepot-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vandepot-domain = { path = "../domain" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
